fixed issue with input styling on safari ios

--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -25,6 +25,7 @@
 }
 
 .input {
+    -webkit-appearance: none;
     font-size: 20px;
     border: none;
     border-bottom: 2px solid #000;
